# echomind

./: package.json
plan/: plan.md
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/transcription/: mod.rs
src/components/: AudioRecorder.js  SummaryManager.js
