[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0" }
tauri-plugin-log = "2.0.0-rc"
# Audio recording
cpal = "0.15.2"
hound = "3.5.1"
# Async support
tokio = { version = "1.32.0", features = ["full"] }
# Storage
rusqlite = { version = "0.29.0", features = ["bundled"] }
# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }
dasp = "0.11.0"
llm-chain = "0.13.0"
llm-chain-openai = "0.13.0"
